# ferbit

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml  run.sh  run_local.sh  start_services.sh  stop.sh  test_tunnel.sh
agents/expert_agent/: .dockerignore  .gitignore  Dockerfile  a2a_server.py  agent_executor.py  main.py  pyproject.toml  test_client.py  test_env.py
agents/main_agent/: .dockerignore  Dockerfile  README.md  README_interactive.md  a2a_server.py  agent_executor.py  interactive_client.py  main.py  pyproject.toml  test_client.py
agents/main_agent/.claude/: settings.local.json
agents/search_agent/: Dockerfile  interactive_search_client.py  keyword_generator.py  main.py  mcp_tools.py  pyproject.toml  rate_limiter.py  search_agent.py  search_client.py  server.py  test_docker_containers.py  test_integration.py
mcp/opensearch_mcp/: Dockerfile  main.py  main_no_tunnel.py  pyproject.toml
mcp/opensearch_mcp_desktop/: .gitignore  Dockerfile  main.py  main_no_tunnel.py
